# rust-actix-mysql

./: .env  Cargo.toml  api.http  notepad.md
src/: database.rs  main.rs
src/routes/: create_user.rs  hello_user.rs  home.rs  mod.rs  todos.rs
