[package]
name = "rust-actix-mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "*", features = ["mysql", "runtime-tokio-native-tls", "time"] }
dotenv = "0.15.0"
